Changelog
=========

1.1 (UNRELEASED)
------------------


1.0 (2013-12-16)
-------------------

- Initial release
  [erral]